@@ -106,8 +106,6 @@ int mapif_save_homunculus(int fd, int account_id, struct s_homunculus *hd)
 
 	if(hd->hom_id==0) // new homunculus
 	{
-		ShowInfo("New homunculus name : %s\n",hd->name);
-
 		sprintf(tmp_sql, "INSERT INTO `homunculus` "
 			"(`char_id`, `class`,`name`,`level`,`exp`,`intimacy`,`hunger`, `str`, `agi`, `vit`, `int`, `dex`, `luk`, `hp`,`max_hp`,`sp`,`max_sp`,`skill_point`, `rename_flag`, `vaporize`) "
 			"VALUES ('%d', '%d', '%s', '%d', '%u', '%u', '%d', '%d', %d, '%d', '%d', '%d', '%d', '%d', '%d', '%d', '%d', '%d', '%d', '%d')",
@@ -208,7 +206,8 @@ int mapif_load_homunculus(int fd){
 
 	mysql_free_result(sql_res);
 
-	ShowInfo("Homunculus loaded (%d - %s).\n", homun_pt->hom_id, homun_pt->name);
+	if (save_log)
+		ShowInfo("Homunculus loaded (%d - %s).\n", homun_pt->hom_id, homun_pt->name);
 	return mapif_info_homunculus(fd, RFIFOL(fd,2), homun_pt);
 }
 
